# basic_monitoring

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20240319000000_add_ssl_monitors.sql  20240321000000_add_ssl_alerts.sql  20240322000000_create_alerts.sql
src/: alerts.rs  dashboard.rs  database.rs  email.rs  email_preferences.rs  footer.rs  main.rs  monitors.rs  navbar.rs  profile.rs  public_status.rs  register.rs  reports.rs  save_monitor.rs  server_health.rs  sidebar.rs  ssl_checker.rs  ssl_monitors.rs  ssl_worker.rs  telegram.rs  telegram_setup.rs  worker_monitor.rs
